<?xml version="1.0"?>
<package>
  <name>mavlink_ros</name>
  <version>0.0.0</version>
  <description>The mavlink_ros package</description>

  <maintainer email="centelld@uji.es">centelld</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
